--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Lugares Turisticos em São paulo</title>
+    <title>Pontos Turisticos em São paulo</title>
 
 </head>
 
@@ -15,21 +15,14 @@
         <p> Conheça um pouco das maravilhas paulistas Pontos Turisticos de SÂO PAULO
     </h3>
 
-    <center>
-        <span style='font-size:30px;'>&#128526; I will show the beauty of BROTAS-SP </p></span>
-    </center>
+
 </header>
 <font face="arial"></font>
 
 <body bgcolor="#EEE8AA">
-    <section>Horários para Brotas: todos os dias às 7:00 / 11:20 e 18:30 hs – Terminal Rodoviário Barra Funda</section>
-    <section>São Paulo: 242 km até BROTAS-SP </section>
-    <section> <a href="https://brotas.com.br/">Conheça mais sobre este lindo lugar ( CLICK AQUI )</a> </section>
-    <section> <a href="https://www.ecoacao.com.br/passeios-atividades-em-brotas/rafting-em-brotas/">rafting-em-brotas ( CLICK AQUI )</a> </section>
-    <section> <a href="https://www.google.com/maps/dir/-23.5220536,-46.6415726/recanto+das+cachoeiras/@-22.8655554,
-        -48.4897363,8z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x94c79faa8cafc249:0xf756c9208231fad3!2m2!1d-48.041882!
-        2d-22.403212">Recanto das Cachoeiras ( CLICK AQUI )</a> </section>
-
+    <center>
+        <span style='font-size:30px;'>&#128526; I will show the beauty of BROTAS-SP </p></span>
+    </center>
 
 
     <center>
@@ -41,9 +34,9 @@
 
     <img src="img/brotas cachoeira.PNG" <br clear="left">
     <img src="img/BROTAS CACHOEIRA 2.PNG" width="655" height="375" <br clear="left">
-    <img src="img/bote3.PNG" <br clear="left">
+    <img src="img/bote3.PNG" width="655" height="375" <br clear="left">
     <img src="img/bote4.PNG" width="655" height="375" <br clear="left">
-    <img src="img/rafit brotas.PNG" <br clear="left">
+    <img src="img/rafit brotas.PNG" width="655" height="375" <br clear="left">
     <img src="img/brotas6.PNG" width="655" height="375" <br clear="left">
     <h3>
         <p>Impossível não pensar em Brotas sem lembrar do turismo de aventura.
@@ -54,8 +47,36 @@
             com a família.
             Ainda assim, dá pra ter uma dose extra de adrenalina.</p>
     </h3>
+    <h3>
+        <p>Entre as principais atividades radicais e passeios em Brotas , os destaques são:
+            rafting, canionismo, escalada indoor, rapel, arvorismo, tirolesa, cicloturismo, cavalgada, quadriciclo,
+            passeios off road, queda livre, kayak duplo e voo de balão. A parte boa é que essas atividades podem
+            ser aproveitadas com tranquilidade, pois a cidade é o local com o maior número de atrações com o selo do
+            Inmetro no quesito gestão de segurança.
+
+            A cidade é cortada pelo rio Jacaré-Pepira, um dos mais limpos do estado de São Paulo, e as paisagens
+            tornam os passeios em Brotas ainda mais encantadores. Outro ponto positivo é a localização privilegiada
+            - a cidade se encontra na região central de São Paulo, localizada a 242 km da capital paulista, e tem fácil
+            acesso a rodovias duplicadas, como Bandeirantes, Anhanguera e Washington Luís.
+
+        </p>
+    </h3>
+
+
+    <section> <a href="https://brotas.com.br/">Conheça mais sobre este lindo lugar ( CLICK AQUI )</a> </section>
+    <section> <a href="https://www.ecoacao.com.br/passeios-atividades-em-brotas/rafting-em-brotas/">rafting-em-brotas (
+            CLICK AQUI )</a> </section>
+    <section> <a href="https://www.google.com/maps/dir/-23.5220536,-46.6415726/recanto+das+cachoeiras/@-22.8655554,
+        -48.4897363,8z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x94c79faa8cafc249:0xf756c9208231fad3!2m2!1d-48.041882!
+        2d-22.403212">Recanto das Cachoeiras ( CLICK AQUI )</a> </section>
+    <section> <a
+            href="https://www.tripadvisor.com.br/Attractions-g793338-Activities-Brotas_State_of_Sao_Paulo.html">Conheça
+            os melhores pacotes que cabe no seu bolso( CLICK AQUI )</a> </section>
+
+
 
 </body>
+
 
 <body bgcolor="#EEE8AA">
     <center>
@@ -72,50 +93,115 @@
 
     <img src="img/tiro1.PNG" width="670" height="375" <br clear="left">
     <img src="img/tiro4.PNG" width="655" height="375" <br clear="left">
-    <h3>
-        <p>Pequena cidade do interior de São Paulo na Serra da Mantiqueira,
-            Pedra Bela é nacionalmente conhecida pelos praticantes de esportes de aventura
-            por abrigar a maior tirolesa das Américas. O percurso que vai do alto da Pedra do Santuário até o Portal da
-            Cidade,
-            oferece uma paisagem de tirar o fôlego. São 1.900m de extensão com velocidade de até 107 km por hora,
-            a uma altura de até 250 metros do chão. Mega adrenalina!</p>
+
+    <p>Pequena cidade do interior de São Paulo na Serra da Mantiqueira,
+        Pedra Bela é nacionalmente conhecida pelos praticantes de esportes de aventura
+        por abrigar a maior tirolesa das Américas. O percurso que vai do alto da Pedra do Santuário até o Portal da
+        Cidade,
+        oferece uma paisagem de tirar o fôlego. São 1.900m de extensão com velocidade de até 107 km por hora,
+        a uma altura de até 250 metros do chão. Mega adrenalina!</p>
     </h3>
-    <section> <a href="http://tirolesapedrabela.com.br/">Conheça mais sobre este lindo lugar ( CLICK AQUI )</a>
-    </section>
-    <section> <a href="https://www.google.com/maps/dir/-23.5220536,-46.6415726/Pedra+Bela,+SP,+12990-000/@-23.1624081
+    <h3 style="color:rgb(47, 233, 10);">
+        <section> <a href="http://tirolesapedrabela.com.br/">Conheça mais sobre este lindo lugar ( CLICK AQUI )</a>
+        </section>
+        <section> <a href="https://www.google.com/maps/dir/-23.5220536,-46.6415726/Pedra+Bela,+SP,+12990-000/@-23.1624081
                             ,-46.962693,10z/data=!3m1!4b1!4m10!4m9!1m1!4e1!1m5!1m1!1s0x94c94b85ae406f45:0x5fffaa4ea9bb78c0!2m2!1d-46.4433575!2d
                             -22.7947984!3e0">Consulte o mapa ( CLICK AQUI )</a> </section>
-
-                            <center>
-                                <span style='font-size:30px;'>&#128526; I will show the beauty of SÃO ROQUE </p></span>
-                            </center>
-                            <center>
-                                <h3 style="color:Tomato;">
-                                    <p>SÃO ROQUE ( Para os amantes do romantismo, um lugar perfeito para casais ).
-                                </h3>
-                            </center>
+    </h3>
 
 
+    <center>
+        <span style='font-size:30px;'>&#128526; I will show the beauty of SÃO ROQUE </p></span>
+    </center>
+    <center>
+        <h3 style="color:Tomato;">
+            <p>SÃO ROQUE ( Para os amantes do romantismo, um lugar perfeito para casais ).
+        </h3>
+    </center>
 
-    <section><img src="img/rota do vinho 2.PNG" width="670" height="375" <br clear="left">
+
+    ,
+
+    <section>
+        <img src="img/rota do vinho 2.PNG" width="670" height="375" <br clear="left">
         <img src="img/rota do vinho.PNG" width="655" height="375" <br clear="left">
+        <img src="img/sao roque 01.PNG" width="670" height="375" <br clear="left">
+        <img src="img/sao roque.PNG" width="655" height="375" <br clear="left">
         <h3>
-            <p> São Roque é conhecida como a Terra do Vinho pelas dezenas de vinícolas instaladas na região. 
-                Não à toa, um dos principais atrativos da cidade é a Rota do Vinho, localizada em meio à natureza 
-                e composta por três vias com mais de 30 estabelecimentos, entre restaurantes, lojas, fazendas, vinícolas, empórios 
+            <p> São Roque é conhecida como a Terra do Vinho pelas dezenas de vinícolas instaladas na região.
+                Não à toa, um dos principais atrativos da cidade é a Rota do Vinho, localizada em meio à natureza
+                e composta por três vias com mais de 30 estabelecimentos, entre restaurantes, lojas, fazendas,
+                vinícolas, empórios
                 e centros de entretenimento.
 
                 Por ser muito próximo a São Paulo –a apenas 65 km–, é possível fazer um bate e volta
-                 e aproveitar muito a região em apenas um dia.</p>
+                e aproveitar muito a região em apenas um dia.</p>
         </h3>
         <section> <a href="https://www.roteirodovinho.com.br/">Conheça mais sobre este lindo lugar ( CLICK AQUI )</a>
         </section>
-        <section> <a href=" https://www.google.com/maps/search/s%C3%A3o+roque+rota+do+vinho/@-23.5689432,
+        <section> <a href="http://www.viajarbarato.com.br/compra-coletiva/sao-roque-1604.htm">Conheça os melhores preços
+                para seu final de semana ( CLICK AQUI )</a>
+            <section> <a href=" https://www.google.com/maps/search/s%C3%A3o+roque+rota+do+vinho/@-23.5689432,
             -47.1309788,14z">Consulte o mapa ( CLICK AQUI )</a> </section>
             <section> <a href=" https://www.google.com/maps/dir/-23.5220536,-46.6415726/s%C3%A3o+roque+rota+do+vinho/@-23.5255624,
                 -47.1668163,10z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x94cf0d39795ab455:0x2b1f6f48ca97e6a6!2m2!
                 1d-47.1237963!2d-23.5485224">Adega Terra do Vinho( CLICK AQUI )</a> </section>
-        
+
+</body>
+
+<body bgcolor="#EEE8AA">
+    <center>
+        <span style='font-size:30px;'>&#128526; I will show the beauty of HOLAMBRA- SP </p></span>
+    </center>
+    <center>
+        <h3 style="color:Tomato;">
+            <p>HOLAMBRA- SP (Um excelente lugar para curtir com a esposa, namorada e pais.).
+        </h3>
+    </center>
+
+
+
+
+    <img src="img/holambra 01.PNG" width="670" height="375" <br clear="left">
+    <img src="img/holambra 02.PNG" width="655" height="375" <br clear="left">
+    <img src="img/holambra 03.PNG" width="670" height="375" <br clear="left">
+    <img src="img/holambra.PNG" width="655" height="375" <br clear="left">
+
+    <p>Holambra é um município brasileiro do estado de São Paulo e microrregião de Campinas,
+        fundada em 14 de julho de 1948. Seu nome, junção de Holanda, América e Brasil,
+        se dá em virtude da colônia neerlandesa que se firmou na antiga fazenda Ribeirão.</p>
+    <p>Conhecida por ser a maior produtora de plantas ornamentais do Brasil e também sede da Expoflora (maior exposição
+        de flores e plantas da América Latina que acontece entre os meses de agosto e setembro), a cidade oferece aos
+        seus visitantes lindos jardins, praças super bem cuidadas para a diversão da criançada, a deliciosa culinária
+        alemã e sobremesas típicas de tirar o fôlego! Não deixe de passar em uma das docerias para provar os quitutes
+        locais!
+
+        Suas ruas principais conservam a arquitetura das casinhas no estilo holandês,
+        então aproveite a caminhada para, além de comprar souvenires de porcelana no centrinho comercial,
+        garantir lindas fotos como recordação.</p>
+    </h3>
+    <h3 style="color:rgb(47, 233, 10);">
+        <section> <a href="https://pt.wikipedia.org/wiki/Holambra#Expoflora">Conheça mais sobre este lindo lugar ( CLICK
+                AQUI )</a>
+        </section>
+        <section> <a href="https://www.google.com/maps/place/Holambra,+SP,+13825-000/@-22.6297847,-47.0707473,14z/data=!
+        3m1!4b1!4m5!3m4!1s0x94c8ec2e881850af:0x445a6211e9cf70bc!8m2!3d-22.
+        6409997!4d-47.0491411?hl=pt-BR">Consulte o mapa ( CLICK AQUI )</a> </section>
+    </h3>
+
+
+    <center>
+        <span style='font-size:30px;'>&#128526; I will show the beauty of SOCORRO_SP </p></span>
+    </center>
+    <center>
+        <h3 style="color:Tomato;">
+            <p>SOCORRO_SP ( Socorro e um perfeito lugar para relaxar e se aventurar em uma única cidadel).
+        </h3>
+    </center>
+
+
+
+    
 </body>
 
 
