--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </center>
 
 
-    ,
+
 
     <section>
         <img src="img/rota do vinho 2.PNG" width="670" height="375" <br clear="left">
@@ -189,22 +189,66 @@
         6409997!4d-47.0491411?hl=pt-BR">Consulte o mapa ( CLICK AQUI )</a> </section>
     </h3>
 
-
     <center>
-        <span style='font-size:30px;'>&#128526; I will show the beauty of SOCORRO_SP </p></span>
+        <span style='font-size:30px;'>&#128526; I will show the beauty SOCORRO - SP </p></span>
     </center>
     <center>
         <h3 style="color:Tomato;">
-            <p>SOCORRO_SP ( Socorro e um perfeito lugar para relaxar e se aventurar em uma única cidadel).
+            <p>SOCORRO - SP ( Localizado próximo a Campinas, este e um perfeito lugar para se
+                curtir do relaxamneto até a aventura extrema ).
         </h3>
     </center>
 
 
 
-    
+
+    <section>
+        <img src="img/socorro 01.PNG" width="670" height="375" <br clear="left">
+        <img src="img/socorro 02.PNG" width="655" height="375" <br clear="left">
+        <img src="img/socorro 03.PNG" width="670" height="375" <br clear="left">
+        <img src="img/socorro 04.PNG" width="655" height="375" <br clear="left">
+        <h3>
+            <p> VISITAR A GRUTA DO ANJO
+
+                Antiga mina de extração de quartzo desativada em 1995, a gruta sofreu infiltrações que criaram uma
+                grande
+                piscina natural que chega a ter 4 metros de profundidade em alguns trechos e agora é repleta de
+                peixinhos.
+                Não é possível mergulhar, mas os visitantes podem andar de pedalinho e admirar o visual encantador com a
+                água translúcida que atravessa a formação rochosa. A gruta, inclusive,
+                já serviu de locação para filmagens da novela Império, de 2014, da Rede Globo. </p>
+
+            <h3>
+                <p> VER O PÔR DO SOL NO MIRANTE DA PEDRA DA BELA VISTA
+
+                    Ponto turístico mais alto da cidade, a Pedra da Bela Vista tem um visual maravilhoso durante
+                    o pôr do sol. O céu fica laranja enquanto músicos tocam ao vivo e o clima tranquilo impera.
+                    É possível relaxar beliscando petiscos no restaurante ao lado que oferece pizza na pedra,
+                    linguiças na chapa e o famoso pan de palo que você assa na hora. Para os mais aventureiros,
+                    o local também conta com o maior rapel da cidade, de 98 metros de altura. (R$ 20 para entrar).
+
+                    Dica: programe-se para estar a caminho pelo menos uma hora antes do pôr do sol para conseguir
+                    chegar a tempo, pois a estrada é de terra e bem esburacada. </p>
+            </h3>
+        </h3>
+        <section> <a href="https://www.carpemundi.com.br/o-que-fazer-em-socorro/">Conheça mais sobre este lindo lugar ( CLICK AQUI )</a>
+        </section>
+        <section> <a href="https://www.carpemundi.com.br/home-hospedagem/">Conheça os melhores preços
+                para seu final de semana ( CLICK AQUI )</a>
+            <section> <a href="https://www.google.com/maps/dir/Bom+Retiro,+S%C3%A3o+Paulo+-+SP,+Brasil/Portal+da+Cidade+de+Socorro,
+                +Socorro+-+SP,+13960-000/@-23.0722621,-47.2775941,9z/data=!3m1!4b1!4m14!4m13!1m5!1m1!
+                1s0x94ce58700029f3af:0x36410148dfee5b68!2m2!1d-46.6416846!2d-23.5220548!1m5!1m1!1s0x94c93f6a726a197f
+                :0xe03096ad9401a2d4!2m2!1d-46.5325542!2d-22.6185272!3e0?hl=pt-BR">Consulte o mapa ( CLICK AQUI )</a> </section>
+            
+
+
+
+
+
+
+
+
 </body>
-
-
 
 
 
