--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Pontos Turisticos em São paulo</title>
+    <title>Pontos turísticos em São paulo</title>
 </head>
 
 <header>
@@ -14,7 +14,7 @@
     <h3 style="color:rgb(15, 15, 15);">
         <p>Partiu interio de São Paulo aventura ou relaxar, casal ou família, você escolhe como vai ser seu final de
             semana.
-        <p> Conheça um pouco mais dos Pontos Turisticos de SÂO PAULO
+        <p> Conheça um pouco mais dos Pontos turísticos de SÂO PAULO
     </h3>
 
     <a id="idDoBotao" href="https://www.guiadasemana.com.br/turismo/galeria/cidades-pequenas-e-proximas-a-sao-paulo-que-valem-a-visita" title=""> CLICK AQUI E :Conheça muito mais sobre o interio de São Paulo <a id="idDoBotaoFechar" href="#" title=""></a>
@@ -63,7 +63,7 @@
 
             <li>
                 <a href="http://www.paraitinga.com.br/">SÃO LUIS DO PARATINGA - SP ( Lugar pacato com belas vistas
-                    montonhosas e cachoeiras)</a>
+                    montanhosas e cachoeiras)</a>
                 </li>
 
             <li>
@@ -86,7 +86,7 @@
     <center>
         <h3 style="color:Tomato;">
             <p>SOCORRO - SP ( Localizado próximo a Campinas, este e um perfeito lugar para se
-                curtir do relaxamneto até a aventura extrema ).
+                curtir do relaxameto até a aventura extrema ).
         </h3>
     </center>
 
@@ -242,7 +242,7 @@
 
         <h3 style="color:rgb(47, 233, 10);">
             <section> <a href="https://pt.wikipedia.org/wiki/Holambra#Expoflora">Conheça mais sobre este lindo lugar (
-                    CLICKAQUI )</a>
+                    CLICK AQUI )</a>
             </section>
 
             <section> <a href="https://www.google.com/maps/place/Holambra,+SP,+13825-000/@-22.6297847,-47.0707473,14z/data=!
