--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                 </h3>
     
                 <h1 style="color:rgb(8, 8, 8);">
-                    <p> Praça Doutor Otávio de Moura Andrade - Monumento das Águas - Thermas Water Park -
+                    <p> Praça Doutor Otávio de Moura Andrade - Monumento das Águas - Thermas Water Park - Carnaval com espuma so aqui.
                 </h1>
             </center>
     
