--- a/index.html
+++ b/index.html
@@ -120,14 +120,27 @@
         <li><a href="http://www.google.com" target="_blank" rel="nofollow"> Acesse o Google Search</a></li>
     </ul>
     <style>
+
+        
+    
+         img { 
+            border-radius: 100%;
+         }
+
         body {
             font-size: 20px;
+            background-color: black;
         }
     </style>
 
     <style>
         span {
             font-size: 100px;
+            background-color: darkgoldenrod;
+        }
+
+        p {
+            background-color: white;
         }
     </style>
 
@@ -1712,6 +1725,10 @@
 
         </ul>
     </nav>
+
+    <aside>
+        <link rel="import" href="component.html">
+    </aside>
 
 
 </body>
