--- a/index.html
+++ b/index.html
@@ -206,8 +206,9 @@ li {
                     curtir do relaxameto até a aventura extrema ).
             </h3>
         </center>
-
-        <section>
+        
+       
+        <picture>
             <img src="img/socorro 01.PNG"  width="663" height="375" <br clear="left"> 
             <img src="img/socorro 02.PNG" width="663" height="375" <br clear="left">
             <img src="img/socorro 03.PNG" width="663" height="375" <br clear="left">
@@ -218,7 +219,7 @@ li {
             encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <iframe width="1335" height="409" src="https://www.youtube.com/embed/E3dvOaTbYEY" frameborder="0" allow="accelerometer; autoplay;
              encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </section>
+        </picture>
 
         <p> VISITAR A GRUTA DO ANJO
 
