--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
 
     <h3>Conheça os melhores preços ( hoteis e pousadas de cada região).</h3>
 
-
-
+   
     <ul>
         <li>
-            <a
-                href="https://www.tripadvisor.com.br/Vacation_Packages-g2205129-Santo_Antonio_do_Pinhal_State_of_Sao_Paulo-Vacations.html" target="_blank">SANTO
+            <a href="https://www.tripadvisor.com.br/Vacation_Packages-g2205129-Santo_Antonio_do_Pinhal_State_of_Sao_Paulo-Vacations.html" target="_blank">SANTO
         <i>ANTÔNIO DO PINHAL-SP</i></a>
         </li>
         <li>
@@ -208,7 +206,7 @@ li {
         </center>
         
        
-        <picture>
+        <section>
             <img src="img/socorro 01.PNG"  width="663" height="375" <br clear="left"> 
             <img src="img/socorro 02.PNG" width="663" height="375" <br clear="left">
             <img src="img/socorro 03.PNG" width="663" height="375" <br clear="left">
@@ -219,7 +217,7 @@ li {
             encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <iframe width="1335" height="409" src="https://www.youtube.com/embed/E3dvOaTbYEY" frameborder="0" allow="accelerometer; autoplay;
              encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </picture>
+        </section>
 
         <p> VISITAR A GRUTA DO ANJO
 
