--- a/index3.html
+++ b/index3.html
@@ -1,44 +1,26 @@
-<html>
-<head>
+<h1>Texto parte 2</h1>
 
-</head>
-<body>
+<!--Quebra de linha e Quebra temática -->
+<p>Isso está<br>em uma<br/>nova linha.</p>
+<p>Tema interessante 1</p>
+<hr />
+<p>Tema interessante 2</p>
 
-<article class="all-browsers">
-  <h5>SOCORRO - SP</h5>
-  <article class="browser">
+<!-- Marcações semânticas -->
+<p><strong>Cuidado!</strong>Alta vontagem! <em>Somente pessoal autorizado.</em></p>
+<blockquote cite="https://www.udemy.com/course/curso-web/learn/lecture/9668554#overview"><p>Citações longas...</p></blockquote>
+<p>Fulano disse que <q>Corinthians ta osso</q></p>
 
-    <h4>SOCORRO - SP ( Localizado próximo a Campinas, este e um perfeito lugar para se
-        curtir do relaxameto até a aventura extrema ).</h4>
+<!-- Outras tags -->
+<p>
+  <abbr title="Professor">Prof</abbr> Fulano em seu livro
+  <cite>Livro bem legal</cite> definiu minha lógica
+</p>
 
-    <p>Antiga mina de extração de quartzo desativada em 1995, a gruta sofreu infiltrações que criaram uma
-        grande
-        piscina natural que chega a ter 4 metros de profundidade em alguns trechos e agora é repleta de
-        peixinhos.
-        Não é possível mergulhar, mas os visitantes podem andar de pedalinho e admirar o visual encantador
-        com a
-        água translúcida que atravessa a formação rochosa. A gruta, inclusive,
-        já serviu de locação para filmagens da novela Império, de 2014, da Rede Globo</p>
+<p><dfn>Buraco negro</dfn> é uma região do espaço que ....</p>
 
-  </article>
+<address>
+  <p>Rua Milton, n<sup>41</sup>Vila Guilherme</p>
+</address>
 
-  <article class="browser">
-
-    <h2>Mozilla Firefox</h2>
-
-    <p>Mozilla Firefox is an open-source web browser developed by Mozilla. Firefox has been the second most popular web browser since January, 2018.</p>
-  
-</article>
-
-  <article class="browser">
-
-    <h2>Microsoft Edge</h2>
-
-    <p>Microsoft Edge is a web browser developed by Microsoft, released in 2015. Microsoft Edge replaced Internet Explorer.</p>
-  </article>
-
-</article>
-
-
-</body>
-</html>
+<p>O Oscar vai para <del>LA LA Land</del> <ins>Moolight</ins></p>
