--- a/MG.html
+++ b/MG.html
@@ -2,6 +2,12 @@
 <link rel="stylesheet" type="text/css" href="index2.html">
 </head>
 
+<title>A maravilhosa Minas Gerais</title>
+
+<iframe width="1130" height="409" src="https://www.youtube.com/embed/HgfL3MMrvzM" frameborder="0" 
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+
 <header>
 <center>
 <h1> A maravilhosa Minas Gerais</h1>
@@ -16,13 +22,21 @@ body {
     }
 
     #mg {
-        background-color: white;
+        background-color: rgb(245, 212, 212);
         margin-left: 470px;
         margin-right: 470px;
     }
 
     #texto {
         background-color: white;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    h1 {
+        background-color: red;
+        margin-left: 380px;
+        margin-right: 380px;
     }
 
 </style>
@@ -39,8 +53,16 @@ body {
             <img src="imagens1/cap6.PNG" width="550" height="375" vspace="07px" hspace="10px">
         </section>
 
-        <h1 id="texto"> <dfn> Capitólio -MG </dfn> Capitólio é conhecida como o mar de Minas, por conta de suas muitas águas e lagos. O Lago de Furnas é uma das principais atrações da região, que possui ainda muitos atrativos naturais.
-             A cidade fica localizada entre a Serra da Canastra e o Lago de Furnas....</h1><br><br><br><br>
+        <section>
+            <iframe width="1130" height="409" src="https://www.youtube.com/embed/fTkxEj1dimo" frameborder="0"
+             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+            </iframe>
+        </section>
+
+        <h3 id="texto"> <dfn> Capitólio -MG </dfn> Capitólio é conhecida como o mar de Minas, por conta de suas muitas águas e lagos. 
+            O Lago de Furnas é uma das principais atrações da região, que possui ainda muitos atrativos naturais.
+             A cidade fica localizada entre a Serra da Canastra e o Lago de Furnas....</h3><br><br><br><br>
 
         <center id="MG"> <h3> OURO PRETO - MINAS GERAIS </h3> </center>
 
@@ -49,9 +71,37 @@ body {
             <img src="imagens1/ouro2.PNG" width="550" height="375" vspace="07px" hspace="10px">
             <img src="imagens1/ouro3.PNG" width="550" height="375" vspace="07px" hspace="10px">
             <img src="imagens1/ouro4.PNG" width="550" height="375" vspace="07px" hspace="10px">
+        </section>
 
-            <h1 id="texto"><dfn>Ouro Preto -MG </dfn> Famosa pela sua importância histórica, a cidade de Ouro Preto também encanta pela beleza de suas construções e ruas de pedra.
-             Você só precisa estar preparado para as caminhadas nas longas ladeiras da cidade ....</h1><br><br><br><br>
+        <section>
+            <iframe width="1130" height="409" src="https://www.youtube.com/embed/DWxfR_4CRG4" frameborder="0" allow="accelerometer; 
+            autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+        </section>
+
+            <h3 id="texto"><dfn>Ouro Preto -MG </dfn> Famosa pela sua importância histórica, a cidade de Ouro Preto também encanta pela beleza de suas construções e ruas de pedra.
+             Você só precisa estar preparado para as caminhadas nas longas ladeiras da cidade ....</h3><br><br><br><br>
+        </section>
+
+        <center id="MG"> <h3> IBITIPOCA - MINAS GERAIS </h3> </center>
+
+        <section>
+            <img src="imagens1/ibi1.PNG" width="550" height="375" vspace="07px" hspace="10px">
+            <img src="imagens1/ibi2.PNG" width="550" height="375" vspace="07px" hspace="10px">
+            <img src="imagens1/ibi3.PNG" width="1125" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/ibi4.PNG" width="550" height="375" vspace="07px" hspace="10px">
+            <img src="imagens1/ibi5.PNG" width="550" height="375" vspace="07px" hspace="10px">
+        </section>
+
+        <section>
+            <iframe width="1130" height="480" src="https://www.youtube.com/embed/Q6ObeSnzXoc" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+        </section>
+
+            <h3 id="texto"><dfn> Ibitipoca -MG </dfn>
+            Conceição de Ibitipoca é um dos lugares turísticos mais visitados e não é a toa.
+            O parque das águas possui diversas belezas naturais e estonteantes, como a famosa Janela do Céu ....</h3><br><br><br><br>
         </section>
    
 </body>
