--- a/MG.html
+++ b/MG.html
@@ -40,6 +40,7 @@ body {
     }
 
 </style>
+<center>
 <body class="style">
 
     <center id="MG"> <h3> CAPITÓLIO - MINAS GERAIS </h3> </center>
@@ -104,5 +105,5 @@ body {
             O parque das águas possui diversas belezas naturais e estonteantes, como a famosa Janela do Céu ....</h3><br><br><br><br>
         </section>
    
-</body>
+</body></center>
 
