--- a/MG.html
+++ b/MG.html
@@ -16,8 +16,8 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 
 <style>
 body {
-    margin-left: 110px;
-    margin-bottom: 50px;
+    margin-left: 75px;
+    margin-bottom: 10px;
     background-color: black;
     }
 
@@ -40,18 +40,18 @@ body {
     }
 
 </style>
-<center>
+
 <body class="style">
 
     <center id="MG"> <h3> CAPITÓLIO - MINAS GERAIS </h3> </center>
 
         <section>
-            <img src="imagens1/cap1.PNG" width="1125" height="475" vspace="07px" hspace="10px">
-            <img src="imagens1/cap2.PNG" width="1125" height="475" vspace="07px" hspace="10px">
-            <img src="imagens1/cap3.PNG" width="1125" height="475" vspace="07px" hspace="10px">
-            <img src="imagens1/cap4.PNG" width="1125" height="475" vspace="07px" hspace="10px">
-            <img src="imagens1/cap5.PNG" width="1125" height="475" vspace="07px" hspace="10px">
-            <img src="imagens1/cap6.PNG" width="1125" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/cap1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/cap2.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/cap3.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/cap4.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/cap5.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/cap6.PNG" width="575" height="475" vspace="07px" hspace="10px">
         </section>
 
         <section>
@@ -68,10 +68,10 @@ body {
         <center id="MG"> <h3> OURO PRETO - MINAS GERAIS </h3> </center>
 
         <section>
-            <img src="imagens1/ouro1.PNG" width="1125" height="475" vspace="07px" hspace="10px">
-            <img src="imagens1/ouro2.PNG" width="1125" height="475" vspace="07px" hspace="10px">
-            <img src="imagens1/ouro3.PNG" width="1125" height="475" vspace="07px" hspace="10px">
-            <img src="imagens1/ouro4.PNG" width="1125" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/ouro1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/ouro2.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/ouro3.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/ouro4.PNG" width="575" height="475" vspace="07px" hspace="10px">
         </section>
 
         <section>
@@ -87,11 +87,11 @@ body {
         <center id="MG"> <h3> IBITIPOCA - MINAS GERAIS </h3> </center>
 
         <section>
-            <img src="imagens1/ibi1.PNG" width="1125" height="475" vspace="07px" hspace="10px">
-            <img src="imagens1/ibi2.PNG" width="1125" height="775" vspace="07px" hspace="10px">
-            <img src="imagens1/ibi3.PNG" width="1125" height="475" vspace="07px" hspace="10px">
-            <img src="imagens1/ibi4.PNG" width="1125" height="475" vspace="07px" hspace="10px">
-            <img src="imagens1/ibi5.PNG" width="1125" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/ibi1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/ibi2.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/ibi3.PNG" width="1165" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/ibi4.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/ibi5.PNG" width="575" height="475" vspace="07px" hspace="10px">
         </section>
 
         <section>
@@ -104,6 +104,5 @@ body {
             Conceição de Ibitipoca é um dos lugares turísticos mais visitados e não é a toa.
             O parque das águas possui diversas belezas naturais e estonteantes, como a famosa Janela do Céu ....</h3><br><br><br><br>
         </section>
-   
-</body></center>
+</body>
 
