--- a/MG.html
+++ b/MG.html
@@ -10,7 +10,7 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 
 <header>
 <center>
-<h1> A maravilhosa Minas Gerais</h1>
+<h3>A maravilhosa Minas Gerais</h3>
 </center>
 </header>
 
@@ -21,8 +21,17 @@ body {
     background-color: black;
     }
 
+    iframe {
+        margin-bottom: 50px;
+    }
+
+    header {
+        background-color: red;
+        margin-bottom: 50px;
+    }
+
     #mg {
-        background-color: rgb(245, 212, 212);
+        background-color: rgb(248, 6, 6);
         margin-left: 470px;
         margin-right: 470px;
     }
@@ -39,11 +48,19 @@ body {
         margin-right: 280px;
     }
 
+    h4 {
+        background-color: rgb(250, 250, 250);
+        margin-right: 980px;
+    }
+
 </style>
 
 <body class="style">
 
     <center id="MG"> <h3> CAPITÓLIO - MINAS GERAIS </h3> </center>
+
+    <a href="https://emalgumlugardomundo.com.br/hoteis-pousadas-em-capitolio-mg/"
+            target="_blank"><h4><b><i>Valores dos Hoteis e pousadas de Capitólio</i></b></h4></a>
 
         <section>
             <img src="imagens1/cap1.PNG" width="575" height="475" vspace="07px" hspace="10px">
@@ -55,15 +72,15 @@ body {
         </section>
 
         <section>
-            <iframe width="1130" height="409" src="https://www.youtube.com/embed/fTkxEj1dimo" frameborder="0"
+            <iframe width="1165" height="409" src="https://www.youtube.com/embed/fTkxEj1dimo" frameborder="0"
              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen>
             </iframe>
-        </section>
 
         <h3 id="texto"> <dfn> Capitólio -MG </dfn> Capitólio é conhecida como o mar de Minas, por conta de suas muitas águas e lagos. 
             O Lago de Furnas é uma das principais atrações da região, que possui ainda muitos atrativos naturais.
              A cidade fica localizada entre a Serra da Canastra e o Lago de Furnas....</h3><br><br><br><br>
+            </section>
 
         <center id="MG"> <h3> OURO PRETO - MINAS GERAIS </h3> </center>
 
@@ -75,7 +92,7 @@ body {
         </section>
 
         <section>
-            <iframe width="1130" height="409" src="https://www.youtube.com/embed/DWxfR_4CRG4" frameborder="0" allow="accelerometer; 
+            <iframe width="1165" height="409" src="https://www.youtube.com/embed/DWxfR_4CRG4" frameborder="0" allow="accelerometer; 
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
         </section>
@@ -95,14 +112,33 @@ body {
         </section>
 
         <section>
-            <iframe width="1130" height="480" src="https://www.youtube.com/embed/Q6ObeSnzXoc" frameborder="0" 
+            <iframe width="1165" height="480" src="https://www.youtube.com/embed/Q6ObeSnzXoc" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
-        </section>
+        
 
             <h3 id="texto"><dfn> Ibitipoca -MG </dfn>
             Conceição de Ibitipoca é um dos lugares turísticos mais visitados e não é a toa.
             O parque das águas possui diversas belezas naturais e estonteantes, como a famosa Janela do Céu ....</h3><br><br><br><br>
         </section>
+
+        <center id="MG"> <h3> CAPITÓLIO - MINAS GERAIS </h3> </center>
+
+        <section>
+            <img src="imagens1/gon1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/gon2.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/gon3.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/gon4.PNG" width="575" height="475" vspace="07px" hspace="10px">
+            <img src="imagens1/gon5.PNG" width="1165" height="475" vspace="07px" hspace="10px">
+        </section>
+        <section>
+            <iframe width="1165" height="480" src="https://www.youtube.com/embed/th8IQ7Swros" frameborder="0" allow="accelerometer; autoplay; 
+            clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+
+        </section>
+
+        <h3 id="texto"> <dfn> Gonçalves - MG </dfn> Essa pequena cidade fica na região de Pouso Alegre e guarda muitas atrações, como cachoeiras e montanhas. Está localizada bem no meio da Serra da Mantiqueira, 
+            perto de São Paulo, e você pode fazer trilhas em muitas das paisagens locais, como a Pedra do Forno..</h3><br><br><br><br>
 </body>
 
