--- a/index.html
+++ b/index.html
@@ -38,10 +38,16 @@
         <ul>
             <li><a href="http://www.google.com" target="_blank"> <em>Acesse o Google Search</em></a></li>
         </ul>
+
+        <nav>
+            <a href="MG.html" target="_blank"> <em>CONHEÇA TAMBÉM A MARAVILHOSA MINAS GERAIS</em></a>
+        </nav>
+
         <style>
-           
 
-
+            em {
+                color: red;
+            }
 
             h1 {
                 background-color: rgb(169, 169, 169);
@@ -87,13 +93,6 @@
         <p> CLICK AQUI e vá direto ao que lhe enteressa.</p>
 
     </header>
-
-
-    <nav>
-        <a href="MG.html" target="_blank"> <em>Turismo em Capitólio MG </em></a>
-    </nav>
-
-
 
     <div id="conteudo">
 
