--- a/MG.html
+++ b/MG.html
@@ -14,11 +14,19 @@
     
 </header>
 
+<nav>
+    <a href="MG.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE SÃO PAULO</em></a>
+</nav>
+
 <style>
     body {
         margin-left: 75px;
         margin-bottom: 10px;
         background-color: black;
+    }
+
+    em {
+        color: red;
     }
 
     iframe {
